--- a/0_teoria_taller_v1_2018.ipynb
+++ b/0_teoria_taller_v1_2018.ipynb
@@ -196,29 +196,12 @@
     "#### ¿Qué resultado nos da? ¿Para qué se usa la barra hacia adelante?\n",
     "<p>En Python se puede usar los siguientes sı́mbolos básicos de matemáticas, que en programación se llaman operadores:</p>\n",
     "\n",
-    "<table>\n",
-    "  <tr>\n",
-    "    <th>Operador</th>\n",
-    "    <th>Descripcion</th>\n",
-    "  </tr>\n",
-    "  <tr>\n",
-    "    <td>+</td>\n",
-    "    <td>Suma</td>\n",
-    "  </tr>\n",
-    "  <tr>\n",
-    "    <td>-</td>\n",
-    "    <td>Resta</td>\n",
-    "  </tr>\n",
-    "  <tr>\n",
-    "    <td>*</td>\n",
-    "    <td>Multiplicación</td>\n",
-    "  </tr>\n",
-    "  <tr>\n",
-    "    <td>/</td>\n",
-    "    <td>división</td>\n",
-    "  </tr>\n",
-    "\n",
-    "</table>"
+    "Operador | Descripción\n",
+    "------------ | -------------\n",
+    "+ | Suma\n",
+    "- | Resta\n",
+    "* | Multiplicación\n",
+    "/ | División"
    ]
   },
   {
@@ -315,26 +298,6 @@
    "source": [
     "((4+5)*2)/5"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<p style=\"font-family: Arial; font-size:1.75em;color:#2462C0; font-style:bold\"><br> RETO I: ¿Podés descubrir y anotar el orden en que se ha ejecutado cada operación? </p>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### ¡Un momento, cerebrito!\n",
-    "Una variable es un espacio para almacenar datos modificables, en la memoria de tu computadora. Es decir, le damos un nombre a un conjunto de “cosas” y una vez declarada esa variable, Python recordará que contiene las cosas que le hayamos asignado. Las variables se utilizan en todos los lenguajes de programación. En Python, una variable se define con la sintaxis: \n",
-    "- **nombre** de la variable = **valor** de la variable\n",
-    "Definamos entonces algunas variables:\n",
-    "- a = 5\n",
-    "- b = 3\n",
-    "- c = 'hola'"
-   ]
   }
  ],
  "metadata": {
@@ -353,7 +316,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
